--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,6 +47,10 @@ security:
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         #- { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+    
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_PARTNER
+        ROLE_PARTNER: ROLE_USER
 
 when@test:
     security:
