--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,6 +26,10 @@ security:
                 check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
         api:
             pattern:   ^/api
@@ -33,6 +37,7 @@ security:
             jwt: ~
 
         main:
+            custom_authenticator: App\Security\LoginBackofficeAuthenticator
             lazy: true
             provider: app_user_provider
 
