--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -51,6 +51,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/backoffice, roles: PUBLIC_ACCESS }
+
         #- { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
     
     role_hierarchy:
