--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,6 +42,11 @@ security:
             lazy: true
             provider: app_user_provider
 
+            form_login:
+                # name of the route created previously
+                login_path: login_index # GET => affiche le form
+                check_path: login_index # POST => traite le form
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
