--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,17 +36,17 @@ security:
             lazy: true
             provider: app_user_provider
 
-            form_login:
+            # form_login:
                 # name of the route created previously
-                login_path: app_backoffice_login # GET => affiche le form
-                check_path: app_backoffice_login # POST => traite le form
+                # login_path: app_backoffice_login # GET => affiche le form
+                # check_path: app_backoffice_login # POST => traite le form
 
-            # custom_authenticator: App\Security\LoginBackofficeAuthenticator
+            custom_authenticator: App\Security\LoginBackofficeAuthenticator
             logout:
                 path: app_backoffice_logout
                 # where to redirect after logout
                 target: app_backoffice_login
-                # invalidate_session: true
+                invalidate_session: true
             
 
             # activate different ways to authenticate
