--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -53,7 +53,8 @@ security:
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/backoffice/login, roles: PUBLIC_ACCESS }
-        - { path: ^/backoffice/, roles: ROLE_ADMIN }
+        - { path: ^/backoffice/logout, roles: PUBLIC_ACCESS }
+        - { path: ^/backoffice/, roles: PUBLIC_ACCESS }
         #- { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
     
     role_hierarchy:
