--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -54,7 +54,7 @@ security:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/backoffice/login, roles: PUBLIC_ACCESS }
         - { path: ^/backoffice/logout, roles: PUBLIC_ACCESS }
-        - { path: ^/backoffice/, roles: PUBLIC_ACCESS }
+        - { path: ^/backoffice/, roles: ROLE_ADMIN }
         #- { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
     
     role_hierarchy:
