--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -52,10 +52,11 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        # - { path: ^/api/user, roles: ROLE_ADMIN }
         - { path: ^/backoffice/login, roles: PUBLIC_ACCESS }
         - { path: ^/backoffice/logout, roles: PUBLIC_ACCESS }
         - { path: ^/backoffice/, roles: ROLE_ADMIN }
-        #- { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        # - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
     
     role_hierarchy:
         ROLE_ADMIN: ROLE_PARTNER
